--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Login SignUp",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Olusegun Oniyide",
@@ -12,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "hbs": "^4.2.0",
     "mongoose": "^8.3.0",
